shipping implementation completed

--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Web.config
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Web.config
@@ -13,6 +13,7 @@
 		<add key="webpages:Enabled" value="false" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
+		<add key="Email.WriteAsFile" value="true" />
 	</appSettings>
 	<connectionStrings>
 		<add name="SportsStoreDbContext" connectionString="Data Source=JEANPC\DEVSERVER; Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />
