applying responsive functions

--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/SportsStore.Web.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/SportsStore.Web.csproj
@@ -179,6 +179,7 @@
     <Content Include="Views\Cart\Checkout.cshtml" />
     <Content Include="Views\Cart\Checkout_old.cshtml" />
     <Content Include="Scripts\jquery-3.7.1.min.map" />
+    <Content Include="Views\Cart\Completed.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
