--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/SportsStore.Web.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/SportsStore.Web.csproj
@@ -186,6 +186,8 @@
     <Content Include="Views\Shared\_Layout.Mobile.cshtml" />
     <Content Include="Views\Nav\MenuFlex.Mobile.cshtml" />
     <Content Include="Views\Shared\_MerchSummary.Mobile.cshtml" />
+    <Content Include="Views\Shared\_AdminLayout.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -195,7 +197,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Admin\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SportsStore.Domain\SportsStore.Domain.csproj">
