--- a/Textbook Exercises/PRO_ASP.NET_MVC/Global.UnitTests/Global.UnitTests.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/Global.UnitTests/Global.UnitTests.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Chapter6.Tests\LinqValueCalc.Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SportsStore.Tests\AdminTest.cs" />
+    <Compile Include="SportsStore.Tests\ImageTests.cs" />
     <Compile Include="SportsStore.Tests\PageLinksTests.cs" />
     <Compile Include="SportsStore.Tests\CartTests.cs" />
   </ItemGroup>
