--- a/Textbook Exercises/PRO_ASP.NET_MVC/Global.UnitTests/Global.UnitTests.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/Global.UnitTests/Global.UnitTests.csproj
@@ -169,7 +169,9 @@
       <Name>SportsStore.Web</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Chapter15.Tests\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
