--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
@@ -94,6 +94,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Chapter14\Chapter14AreaRegistration.cs" />
     <Compile Include="Areas\Chapter14\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Chapter15\Chapter15AreaRegistration.cs" />
+    <Compile Include="Areas\Chapter15\Controllers\AdminController.cs" />
+    <Compile Include="Areas\Chapter15\Controllers\CustomerController.cs" />
+    <Compile Include="Areas\Chapter15\Controllers\HomeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -103,6 +107,8 @@
   <ItemGroup>
     <Content Include="Areas\Chapter14\Views\web.config" />
     <Content Include="Areas\Chapter14\Views\Home\Index.cshtml" />
+    <Content Include="Areas\Chapter15\Views\web.config" />
+    <Content Include="Areas\Chapter15\Views\Shared\ActionName.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -115,6 +121,10 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Chapter14\Data\" />
     <Folder Include="Areas\Chapter14\Views\Shared\" />
+    <Folder Include="Areas\Chapter15\Data\" />
+    <Folder Include="Areas\Chapter15\Views\Admin\" />
+    <Folder Include="Areas\Chapter15\Views\Customer\" />
+    <Folder Include="Areas\Chapter15\Views\Home\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
   <PropertyGroup>
