--- a/Textbook Exercises/PRO_ASP.NET_MVC/Global.UnitTests/Global.UnitTests.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/Global.UnitTests/Global.UnitTests.csproj
@@ -141,6 +141,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chapter15.Tests\RoutesAndURLsTests.cs" />
     <Compile Include="Chapter3.Tests\AdminControllerTests.cs" />
     <Compile Include="Chapter3.Tests\FakeRepository.cs" />
     <Compile Include="Chapter6.Tests\EssentialTool.Test.cs" />
@@ -160,6 +161,10 @@
       <Project>{289344DD-48D6-463F-A363-42D180FB9EF1}</Project>
       <Name>PartOne.Introduction</Name>
     </ProjectReference>
+    <ProjectReference Include="..\PartThree.AdvConcepts\PartThree.AdvConcepts.csproj">
+      <Project>{68F5D988-1EDA-41E8-83AE-27A8517AD818}</Project>
+      <Name>PartThree.AdvConcepts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SportsStore.Domain\SportsStore.Domain.csproj">
       <Project>{A74E2680-5DC7-4B3E-A1E4-C7B33CC65B3C}</Project>
       <Name>SportsStore.Domain</Name>
@@ -169,9 +174,7 @@
       <Name>SportsStore.Web</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Chapter15.Tests\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
