--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Areas\Chapter15\Controllers\HomeController.cs" />
     <Compile Include="Areas\Chapter15\Infrastructure\UserAgentConstraint.cs" />
     <Compile Include="Areas\Chapter16\Chapter16AreaRegistration.cs" />
+    <Compile Include="Areas\Chapter16\Controllers\HomeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -115,6 +116,7 @@
     <Content Include="Areas\Chapter15\Views\Home\CustomVariable.cshtml" />
     <Content Include="Areas\Chapter15\Views\Customer\index.cshtml" />
     <Content Include="Areas\Chapter16\Views\web.config" />
+    <Content Include="Areas\Chapter16\Views\Shared\ActionName.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -129,9 +131,8 @@
     <Folder Include="Areas\Chapter14\Views\Shared\" />
     <Folder Include="Areas\Chapter15\Data\" />
     <Folder Include="Areas\Chapter15\Views\Admin\" />
-    <Folder Include="Areas\Chapter16\Controllers\" />
     <Folder Include="Areas\Chapter16\Data\" />
-    <Folder Include="Areas\Chapter16\Views\Shared\" />
+    <Folder Include="Areas\Chapter16\Views\Home\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
   <PropertyGroup>
