--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
@@ -115,6 +115,8 @@
     <Compile Include="Areas\Chapter16\Chapter16AreaRegistration.cs" />
     <Compile Include="Areas\Chapter16\Controllers\CustomerController.cs" />
     <Compile Include="Areas\Chapter16\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Chapter16\Controllers\LegacyController.cs" />
+    <Compile Include="Areas\Chapter16\Infrastructure\LegacyRoute.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -130,6 +132,7 @@
     <Content Include="Areas\Chapter15\Views\Customer\index.cshtml" />
     <Content Include="Areas\Chapter16\Views\web.config" />
     <Content Include="Areas\Chapter16\Views\Shared\ActionName.cshtml" />
+    <Content Include="Areas\Chapter16\Views\Legacy\GetLegacyURL.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
