--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
@@ -124,6 +124,9 @@
     <Compile Include="Areas\Chapter17\Controllers\DerivedController.cs" />
     <Compile Include="Areas\Chapter17\Controllers\ExampleController.cs" />
     <Compile Include="Areas\Chapter17\Infrastructure\CustomRedirectResult.cs" />
+    <Compile Include="Areas\Chapter18\Chapter18AreaRegistration.cs" />
+    <Compile Include="Areas\Chapter18\Controllers\AccountController.cs" />
+    <Compile Include="Areas\Chapter18\Controllers\HomeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -147,6 +150,10 @@
     <Content Include="Areas\Chapter17\Views\Example\Homepage.cshtml" />
     <Content Include="Areas\Chapter17\Views\Example\IndexViewModelObject.cshtml" />
     <Content Include="Areas\Chapter17\Views\Example\Index.cshtml" />
+    <Content Include="Areas\Chapter18\Views\web.config" />
+    <Content Include="Areas\Chapter18\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Chapter18\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Chapter18\Views\Shared\Login.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -165,6 +172,9 @@
     <Folder Include="Areas\Chapter16\Views\Home\" />
     <Folder Include="Areas\Chapter17\Data\" />
     <Folder Include="Areas\Chapter17\Views\Basic\" />
+    <Folder Include="Areas\Chapter18\Data\" />
+    <Folder Include="Areas\Chapter18\Views\Account\" />
+    <Folder Include="Areas\Chapter18\Views\Home\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
   <PropertyGroup>
