--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
@@ -143,6 +143,10 @@
     <Compile Include="Areas\Chapter18\Infrastructure\ProfileResultAttribute.cs" />
     <Compile Include="Areas\Chapter18\Infrastructure\RangeExceptionAttribute.cs" />
     <Compile Include="Areas\Chapter18\Infrastructure\SimpleMessageAttribute.cs" />
+    <Compile Include="Areas\Chapter19\Chapter19AreaRegistration.cs" />
+    <Compile Include="Areas\Chapter19\Controllers\CommonItemsController.cs" />
+    <Compile Include="Areas\Chapter19\Controllers\PremiumItemsController.cs" />
+    <Compile Include="Areas\Chapter19\Models\Result.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -172,6 +176,10 @@
     <Content Include="Areas\Chapter18\Views\Shared\Login.cshtml" />
     <Content Include="Areas\Chapter18\Views\Admin\Index.cshtml" />
     <Content Include="Areas\Chapter18\Views\Shared\RangeError.cshtml" />
+    <Content Include="Areas\Chapter19\Views\web.config" />
+    <Content Include="Areas\Chapter19\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Chapter19\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Chapter19\Views\Shared\Result.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -194,6 +202,7 @@
     <Folder Include="Areas\Chapter18\Views\Account\" />
     <Folder Include="Areas\Chapter18\Views\GoogleAccount\" />
     <Folder Include="Areas\Chapter18\Views\Home\" />
+    <Folder Include="Areas\Chapter19\Views\PremiumItems\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
   <PropertyGroup>
