--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
@@ -150,6 +150,8 @@
     <Compile Include="Areas\Chapter19\Controllers\HomeController.cs" />
     <Compile Include="Areas\Chapter19\Controllers\CommonItemsController.cs" />
     <Compile Include="Areas\Chapter19\Controllers\PremiumItemsController.cs" />
+    <Compile Include="Areas\Chapter19\Controllers\RemoteDataController.cs" />
+    <Compile Include="Areas\Chapter19\Models\RemoteService.cs" />
     <Compile Include="Areas\Chapter19\Infrastructure\CustomActionInvoker.cs" />
     <Compile Include="Areas\Chapter19\Infrastructure\CustomControllerActivator.cs" />
     <Compile Include="Areas\Chapter19\Infrastructure\CustomControllerFactory.cs" />
@@ -188,6 +190,7 @@
     <Content Include="Areas\Chapter19\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Chapter19\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Chapter19\Views\Shared\Result.cshtml" />
+    <Content Include="Areas\Chapter19\Views\RemoteData\Data.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -210,7 +213,6 @@
     <Folder Include="Areas\Chapter18\Views\Account\" />
     <Folder Include="Areas\Chapter18\Views\GoogleAccount\" />
     <Folder Include="Areas\Chapter18\Views\Home\" />
-    <Folder Include="Areas\Chapter19\Views\PremiumItems\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
   <PropertyGroup>
