--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
@@ -157,6 +157,9 @@
     <Compile Include="Areas\Chapter19\Infrastructure\CustomControllerFactory.cs" />
     <Compile Include="Areas\Chapter19\Infrastructure\LocalAttribute.cs" />
     <Compile Include="Areas\Chapter19\Models\Result.cs" />
+    <Compile Include="Areas\Chapter20\Chapter20AreaRegistration.cs" />
+    <Compile Include="Areas\Chapter20\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Chapter20\Infrastructure\DebugDataView.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -191,6 +194,7 @@
     <Content Include="Areas\Chapter19\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Chapter19\Views\Shared\Result.cshtml" />
     <Content Include="Areas\Chapter19\Views\RemoteData\Data.cshtml" />
+    <Content Include="Areas\Chapter20\Views\web.config" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -213,6 +217,9 @@
     <Folder Include="Areas\Chapter18\Views\Account\" />
     <Folder Include="Areas\Chapter18\Views\GoogleAccount\" />
     <Folder Include="Areas\Chapter18\Views\Home\" />
+    <Folder Include="Areas\Chapter20\Data\" />
+    <Folder Include="Areas\Chapter20\Views\Home\" />
+    <Folder Include="Areas\Chapter20\Views\Shared\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
   <PropertyGroup>
