--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/Web.config
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/Web.config
@@ -15,7 +15,7 @@
 				</credentials>
 			</forms>
 		</authentication>
-		<customErrors mode="On" defaultRedirect="/Content/RangeErrorPage.html"/>
+		<customErrors mode="Off" defaultRedirect="/Content/RangeErrorPage.html"/>
 	</system.web>
 	<system.codedom>
 		<compilers>
