--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Areas\Chapter20\Chapter20AreaRegistration.cs" />
     <Compile Include="Areas\Chapter20\Controllers\Home_OldController.cs" />
     <Compile Include="Areas\Chapter20\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Chapter20\Infrastructure\CustomLocationViewEngine.cs" />
     <Compile Include="Areas\Chapter20\Infrastructure\DebugDataView.cs" />
     <Compile Include="Areas\Chapter20\Infrastructure\DebugDataViewEngine.cs" />
     <Compile Include="Controllers\HomeController.cs" />
