razor engine syntax

--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartThree.AdvConcepts/PartThree.AdvConcepts.csproj
@@ -201,6 +201,7 @@
     <Content Include="Areas\Chapter20\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Chapter20\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Chapter20\Views\Home\Index.cshtml" />
+    <Content Include="Areas\Chapter20\Views\Common\List.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
