buggy day - still getting on homepage load

--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartFour.AdvConcepts/PartFour.AdvConcepts.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartFour.AdvConcepts/PartFour.AdvConcepts.csproj
@@ -96,7 +96,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Chapter21\Chapter21AreaRegistration.cs" />
     <Compile Include="Areas\Chapter21\Controllers\HomeController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -105,10 +105,13 @@
   <ItemGroup>
     <Content Include="Views\web.config" />
     <Content Include="Areas\Chapter21\Views\web.config" />
+    <Content Include="Areas\Chapter21\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Chapter21\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Chapter21\Views\Home\Index.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Main\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -119,8 +122,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Chapter21\Data\" />
-    <Folder Include="Areas\Chapter21\Views\Home\" />
-    <Folder Include="Areas\Chapter21\Views\Shared\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
