templated helper method module completed

--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartFour.AdvConcepts/PartFour.AdvConcepts.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartFour.AdvConcepts/PartFour.AdvConcepts.csproj
@@ -100,6 +100,8 @@
     <Compile Include="Areas\Chapter21\Models\Personnel.cs" />
     <Compile Include="Areas\Chapter22\Chapter22AreaRegistration.cs" />
     <Compile Include="Areas\Chapter22\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Chapter22\Models\PersonnelMD.cs" />
+    <Compile Include="Areas\Chapter22\Models\Personnel.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -117,6 +119,12 @@
     <Content Include="Areas\Chapter22\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Chapter22\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Chapter22\Views\Home\Index.cshtml" />
+    <Content Include="Areas\Chapter22\Views\Home\CreatePerson.cshtml" />
+    <Content Include="Areas\Chapter22\Views\Home\DisplayPerson.cshtml" />
+    <Content Include="Areas\Chapter22\Views\Home\CreatePerson_old.cshtml" />
+    <Content Include="Areas\Chapter22\Views\Shared\EditorTemplates\Role.cshtml" />
+    <Content Include="Areas\Chapter22\Views\Shared\EditorTemplates\Enum.cshtml" />
+    <Content Include="Areas\Chapter22\Views\Shared\EditorTemplates\Boolean.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -130,7 +138,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Chapter22\Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
