--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartFour.AdvConcepts/PartFour.AdvConcepts.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartFour.AdvConcepts/PartFour.AdvConcepts.csproj
@@ -89,7 +89,10 @@
   <ItemGroup>
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
-    <Content Include="Areas\Chapter23\Views\People\GetPeople.cshtml" />
+    <Content Include="Areas\Chapter23\Views\People\GetPeopleAjaxWay.cshtml" />
+    <Content Include="Areas\Chapter23\Views\People\GetPeopleRegularWay.cshtml" />
+    <Content Include="Areas\Chapter23\Views\People\_GetPeopleData.cshtml" />
+    <Content Include="Areas\Chapter23\Views\People\GetPeopleJsonWay.cshtml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.1.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
